tests/extensions/enotify/errors/notify-prohibited.sieve
require "enotify";

notify "mailto:user@example.com";
